--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   path: ^1.9.1
   http: ^1.6.0
   flutter_secure_storage: ^10.0.0
-  google_fonts: ^6.2.1
-  fl_chart: ^0.71.0
+  google_fonts: ^8.0.1
+  fl_chart: ^1.1.1
   shimmer: ^3.0.0
   intl: ^0.20.1
   cached_network_image: ^3.4.1
@@ -25,11 +25,22 @@ dependencies:
   provider: ^6.1.5
   shared_preferences: ^2.5.3
   uuid: ^4.5.1
+  camera: ^0.11.3+1
+  google_mlkit_face_detection: ^0.13.2
+  tflite_flutter: ^0.12.1
+  image: ^4.7.2
+  flutter_image_compress: ^2.4.0
+  supabase_flutter: ^2.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  drift_dev: ^2.31.0
+  build_runner: ^2.4.15
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/models/mobile_face_net.tflite
