--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   image: ^4.7.2
   flutter_image_compress: ^2.4.0
   supabase_flutter: ^2.12.0
+  image_picker: ^1.2.1
+  image_cropper: ^11.0.0
 
 dev_dependencies:
   flutter_test:
