--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -40,9 +40,26 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   drift_dev: ^2.31.0
   build_runner: ^2.4.15
+  flutter_launcher_icons: ^0.14.4
+  flutter_native_splash: ^2.4.7
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icon.png
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
+
+flutter_native_splash:
+  color: "#2563EB"   # AppColors.primary (azul rey/indigo)
+  image: "assets/icon.png"
+  color_dark: "#0F172A" # AppColors.backgroundDark
+  image_dark: "assets/icon.png"
+  android: true
+  ios: true
 
   assets:
     - assets/models/mobile_face_net.tflite
