--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   supabase_flutter: ^2.12.0
   image_picker: ^1.2.1
   image_cropper: ^11.0.0
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
