--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker: ^1.2.1
   image_cropper: ^11.0.0
   table_calendar: ^3.1.2
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +49,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icon.png
+    - assets/models/mobile_face_net.tflite
 
 flutter_icons:
   android: true
@@ -55,12 +57,9 @@ flutter_icons:
   image_path: "assets/icon.png"
 
 flutter_native_splash:
-  color: "#2563EB"   # AppColors.primary (azul rey/indigo)
+  color: "#DC2626"   # AppColors.primary (rojo GymPro)
   image: "assets/icon.png"
   color_dark: "#0F172A" # AppColors.backgroundDark
   image_dark: "assets/icon.png"
   android: true
   ios: true
-
-  assets:
-    - assets/models/mobile_face_net.tflite
