Refactor: Localización total a español, simplificación de interfaz y mejoras en flujo de Asistencia (Entrada/Salida)

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -22,9 +22,12 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
-    "types": []
+    "types": [
+      "node"
+    ]
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "scripts/**/*"
   ]
 }
